--- a/presentation/src/main/res/layout/item_option_select_sticky_header.xml
+++ b/presentation/src/main/res/layout/item_option_select_sticky_header.xml
@@ -5,20 +5,24 @@
     <data>
 
         <variable
-            name="letter"
-            type="char" />
+            name="textResId"
+            type="Integer" />
+
+        <variable
+            name="text"
+            type="String" />
+
     </data>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorSurface"
-        android:maxLength="1"
         android:paddingLeft="@dimen/space_large"
         android:paddingRight="@dimen/space_large"
-        android:text="@{String.valueOf(letter)}"
+        android:text="@{textResId != null ? context.getString(textResId) : text}"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         android:textColor="?colorPrimary"
-        tools:text="A" />
+        tools:text="Header" />
 
 </layout>
