Change width and padding of item_mplus_score.xml

--- a/presentation/src/main/res/layout/item_mplus_score.xml
+++ b/presentation/src/main/res/layout/item_mplus_score.xml
@@ -21,7 +21,7 @@
 
     <LinearLayout
         android:id="@+id/mplus_score_root"
-        android:layout_width="@dimen/item_mplus_score_width"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_normal"
         android:gravity="center_horizontal"
@@ -30,21 +30,18 @@
 
         <TextView
             android:id="@+id/mplus_score_value"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/item_mplus_score_width"
             android:layout_height="@dimen/item_mplus_score_height"
             android:background="@drawable/item_mplus_score_background"
             android:gravity="center"
-            android:paddingStart="@dimen/space_normal"
-            android:paddingTop="@dimen/space_small"
-            android:paddingEnd="@dimen/space_normal"
-            android:paddingBottom="@dimen/space_small"
+            android:padding="@dimen/space_normal"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:autoSizeMaxTextSize="20sp"
             app:autoSizeMinTextSize="12sp"
             app:autoSizeStepGranularity="1sp"
             app:autoSizeTextType="uniform"
-            app:mythicPlusScore="@{score}"
             app:characterMplusScore_scoreColor="@{scoreColor}"
+            app:mythicPlusScore="@{score}"
             tools:text="@string/test_mythic_plus_score" />
 
         <TextView
