Fix Leak Canary not working because of Junit in classpath

--- a/presentation/src/main/res/values/attrs.xml
+++ b/presentation/src/main/res/values/attrs.xml
@@ -11,4 +11,5 @@
         <attr name="mpb_progressVisibility" format="boolean" />
         <attr name="mpb_progressbarColor" format="color|reference" />
     </declare-styleable>
+    <string name="leak_canary_test_class_name">assertk.Assert</string>
 </resources>
