--- a/presentation/src/main/res/layout-land/fragment_character_overall.xml
+++ b/presentation/src/main/res/layout-land/fragment_character_overall.xml
@@ -237,7 +237,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/character_overall_mplus_score_season"
-                app:profileOverview_lastUpdateDateTime="@{viewModel.characterOverallData.lastUpdateDateTime}"
+                app:profileOverview_lastUpdate="@{viewModel.characterOverallData.lastUpdate}"
                 tools:text="@string/profile_overall_last_update_datetime_format" />
 
             <ProgressBar
